2018-05-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexlib.h: Allow non-ascii file names in pdfTeX (w32 only).

2018-04-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftoepdf-newpoppler.cc, pdftosrc-newpoppler.cc:
	Support poppler 0.64.0.

2018-04-14  Karl Berry  <karl@tug.org>

	* TeX Live 2018 release, pdftex 1.40.19.

2018-04-04  Jerry James  <loganjerry@gmail.com>

	* pdftoepdf-newpoppler.cc: Do not copy a Dict, get a reference instead.

2018-03-24  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
            Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* pdftex.ch: Recover the right \lastnodetype initialization
	value ignored by tex.ch.

2018-03-20  Hans Hagen  <pragma@wxs.nl>

	* pdftex.web (Glob...): defined saved_pdf_cur_form.
	(Write out pending forms): save and restore the form.
	Original report from Alexander Grahn,
	http://tug.org/pipermail/tex-live/2018-March/041210.html.

2018-03-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftex.web: pdftex_revision=="19".
	Reported by Uwe Siart, 2018-03-06.

2018-01-25  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
        and Karl Berry  <karl@freefriends.org>

	* writefont.c (font_is_used): import LuaTeX's font_has_subset
	with different name.
	(dopdffont): call it, to avoid failed assertion. (tests/09-fontobjnum)
	Original report from Enrico Gregorio,
	  tug.org/pipermail/tex-live/2018-January/040966.html
	followup with patch at
	  mailman.ntg.nl/pipermail/ntg-pdftex/2018-January/004209.html

2018-01-06  Karl Berry  <karl@freefriends.org>

	* pdftex.web (literal): if a non-PDF special is ignored,
	also output "<special> " and the first 64 characters of the special.
	(slow_print_substr): new procedure, although surely there's
	already a way to print a substring of a pool string.

2018-01-01  Pali Roh\'ar  <pali.rohar@gmail.com>

	Patch 1: explicitly detect bitmap PK font in fm_scan_line,
	instead of the implicit check of ps_name and ff_name being NULL.